--- a/src/components/add-mision-articles/add-mision-articles.component.scss
+++ b/src/components/add-mision-articles/add-mision-articles.component.scss
@@ -9,11 +9,26 @@ div.content{
   border: 1px black solid;
   height:70vh;
   width: 80%;
+  overflow: auto;
 }
+
 .top-container {
   padding: 1rem;
 
 }
-div.canasta{
-  overflow: auto;
+.img {
+  width: 100%;
+  margin-bottom: 18%;
+}
+.card-picture {
+  width: 60%;
+  margin-bottom: 2%;
+}
+.card-picture span{
+  font-size: 11px;
+
+}
+div.cardContainer{
+  width: 15%;
+  height: 20%;
 }
