--- a/src/components/add-mision/add-mision.component.html
+++ b/src/components/add-mision/add-mision.component.html
@@ -11,8 +11,8 @@
         </mat-toolbar>
         <div>
             <mat-tab-group mat-align-tabs="center" mat-stretch-tabs >
-                <mat-tab label="GENERAL"  >  <app-add-mision-general [articles]="articlesLoaded" #general ></app-add-mision-general></mat-tab>
-                <mat-tab label="ARTICULOS" > <app-add-mision-articles #articles></app-add-mision-articles></mat-tab>
+                <mat-tab label="GENERAL"  >  <app-add-mision-general [canasta]="canasta" [articles]="products" #general ></app-add-mision-general></mat-tab>
+                <mat-tab label="ARTICULOS" > <app-add-mision-articles [articles]="products" [categories]="categories" [canasta]="canasta" #articles></app-add-mision-articles></mat-tab>
             </mat-tab-group>
         </div>
 </div>
